# ht3

./: .cproject  .gitignore  .project  app.c  app.h  descr.c  descr.h  main.c  main.h  makefile  readme.md  uart.c  uart.h  usb_boot.c  usb_boot.h  usb_dscr.c
fx3/: README.md  app.c  app.h  config.h  develop.cmd  makefile  usb_descr.c  usb_descr.h  usb_dscr.c  usb_dscr.h
fx3/app/: .cproject  app.c  app.h  config.h  cyfxbulkdscr.c  cyfxbulksrcsink.c  cyfxbulksrcsink.h  gpif2config.h  makefile  module.c  module.h  usb_descr.c  usb_descr.h
fx3/bootloader/: .cproject  bootloader.c  makefile  usb_boot.c
win32/: CMakeLists.txt  main.cpp  msvc.cmd
